[gd_scene load_steps=8 format=3 uid="uid://df3r2j58qx60q"]

[ext_resource type="Script" path="res://scenes/new_apple_tree.gd" id="1_g4tgn"]
[ext_resource type="Script" path="res://interaction/interaction_area.gd" id="2_65rll"]
[ext_resource type="Texture2D" uid="uid://37u1m7nxhcll" path="res://art/survivalgame-appletree.png" id="2_86bm1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7bv80"]
atlas = ExtResource("2_86bm1")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmqlh"]
atlas = ExtResource("2_86bm1")
region = Rect2(40, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_iqw6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bv80")
}],
"loop": false,
"name": &"empty",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmqlh")
}],
"loop": false,
"name": &"ripe",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u0vp1"]
radius = 31.0

[node name="NewAppleTree" type="Node2D"]
script = ExtResource("1_g4tgn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_iqw6x")
animation = &"ripe"

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AppleSpawn" type="Marker2D" parent="."]
position = Vector2(0, -23)

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("2_65rll")
action_name = "steal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_u0vp1")

[connection signal="timeout" from="GrowTimer" to="." method="_on_grow_timer_timeout"]
[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_body_exited"]
